<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2sp"
    android:layout_marginTop="8sp"
    android:layout_marginEnd="2sp"
    android:layout_marginBottom="8sp"
    android:background="#B0FFFFFF"
    android:padding="8dp">


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:weightSum="3">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="4">-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="4">-->

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/viewCalories2"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/kalorie"-->
<!--                android:textColor="@color/black" />-->

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/viewCalories33"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/kalorie"-->
<!--                android:textColor="@color/black" />-->

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/viewCalories42"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/kalorie"-->
<!--                android:textColor="@color/black" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="4">-->

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/viewAvgSpeed"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/predkosc"-->
<!--                android:textColor="@color/black" />-->

<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="400sp"
        android:layout_height="200sp"
        android:layout_marginEnd="5sp"

        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemRunImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewDistance"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/distance"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="6">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewAvgSpeed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/speed"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewRightMax"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.3"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/max_right_br"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/max_right"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewRightAvg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.3"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/avg_right_br"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/avg_right"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="6">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewCalories"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/calories"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewLeftMax"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.3"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/max_left_br"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/max_left"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewLeftAvg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.3"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/avg_left_br"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/avg_left"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>