<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view"
    android:padding="16dp">

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/_00_00_00"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:minLines="2"
                    android:text="@string/whole_time"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewAverageSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/_0km_h"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:text="@string/average_speed"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewTotalDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/_0km"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:textColor="#000000"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/whole_distance" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewTotalCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/_0kcal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:text="@string/burned_calories" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewRightFootMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/percent"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:minLines="2"
                    android:text="@string/max_right_foot"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewRightFootAvg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/percent"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:text="@string/avg_right_foot"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewLeftFootMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/percent"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:text="@string/max_left_foot"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:textColor="#000000">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewLeftFootAvg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:text="@string/percent"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alegreya_sans_sc_medium"
                    android:gravity="center"
                    android:text="@string/avg_left_foot"
                    android:textColor="#000000" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:background="#69FFFFFF"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/chart_avg" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/avgSpeedBarChart"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alegreya_sans_sc_medium">

            </com.github.mikephil.charting.charts.BarChart>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:textColor="#000000"
                android:background="#69FFFFFF"
                android:text="@string/chart_avg_right" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/RightFootBar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alegreya_sans_sc_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:background="#69FFFFFF"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center"
                android:text="@string/chart_avg_left" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/LeftFootBar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alegreya_sans_sc_medium">

            </com.github.mikephil.charting.charts.BarChart>

        </LinearLayout>

    </LinearLayout>
<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>